FlightPath 6.x Changelog
========================

2021-10-27
  Added a new "how to customize" folder and custom theme which inherits from fp6_clean theme.  It also includes instructions
  in a README file for copying the theme to your /custom/theme folder and overriding CSS styles.


2021-10-24
  Added ability to designate notification recipients for when a student sends an SMS to a specific line (advisors will *always* receive
  such notifications from their advisees).  This is a setting on the admin/user page for faculty-staff members only.


2021-10-21
  Added new concept to textareas with a maxlength set.  It will now by default show the character count up to the max.

  Completed sending mass txt messages with Engagements, and getting back results in a CSV.


2021-10-20
  Made alteration to student_search so that if you have schools enabled, and search for a major within a school, you only see results for that
  school.  Also, fixed bug where if more than one school had the same major code, it was skipping over them.
  
  Fixed some malformed HTML in the user module causing placeholder text to look weird.
  
  Fixed a bug by adding permission to schools, to permit a user to edit users/students from a particular school.
  

2021-10-17
  Minor change in admin.module to fix typo.
  
  Implemented sending mass text messages function as part of the Engagements
  module.


2021-10-14
  Fixed bug in notify module, where the notification history table wasn't created.

  Added permissions on a per-phone number level for sending SMS messages.

  Engagements show which department/description the SMS was sent to or from on the main screen.


2021-10-13
  Made changes to engagements schema, so that we can track the SMS number a txt message was sent from, as well as the sms message id, in the table.

  Made change to content_versions table schema, so we have the option of saving a "log" message with the content.  This is accomplished by entering: